--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,11 +6,11 @@ stages:
 
 build:
   stage: build
-  script: /usr/lib/jvm/java-8-openjdk-amd64/bin/javac Main.java
+  script: /usr/lib/jvm/java-8-openjdk-amd64/bin/javac src/Main.java
   artifacts:
     paths:
     - Main.*
 
 execute:
   stage: execute
-  script: /usr/lib/jvm/java-8-openjdk-amd64/bin/java Main
+  script: /usr/lib/jvm/java-8-openjdk-amd64/bin/java src/Main
